--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-email-validator>=2.2.0
-flask>=3.0.3
-flask-login>=0.6.3
-flask-sqlalchemy>=3.1.1
-oauthlib>=3.2.2
-psycopg2-binary>=2.9.10
+Flask>=3.0.0
+Werkzeug>=3.0.1
 requests>=2.31.0
-werkzeug>=3.0.1
+python-dotenv>=1.0.0
+flask-sqlalchemy>=3.1.1
+flask-login>=0.6.3
+psycopg2-binary>=2.9.9
+email-validator>=2.1.0
+oauthlib>=3.2.2
