--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,14 @@ pytest-mock==3.12.0
 pytest-flask==1.3.0
 coverage==7.3.2
 faker==20.1.0
-autodoc
-sphinx
-sphinx-autoapi
-sphinx-rtd-theme
+
+# Documentation
+sphinx==7.2.6
+sphinx-autoapi==3.0.0
+sphinx-rtd-theme==1.3.0
+
+# Linting and formatting
+black==24.1.1
+flake8==7.0.0
+isort==5.13.2
+pylint==3.0.3
