--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,9 @@
-Flask==3.0.0
-Werkzeug==3.0.1
-requests==2.31.0
-python-dotenv==1.0.0
-flask-sqlalchemy==3.1.1
-flask-login==0.6.3
-psycopg2-binary==2.9.9
-email-validator==2.1.0
-oauthlib==3.2.2
-
-# Development dependencies
-pytest==7.4.3
-pytest-cov==4.1.0
-pytest-mock==3.12.0
-pytest-flask==1.3.0
-coverage==7.3.2
-faker==20.1.0
-
-# Documentation
-sphinx==7.2.6
-sphinx-autoapi==3.0.0
-sphinx-rtd-theme==1.3.0
-
-# Linting and formatting
-black==24.1.1
-flake8==7.0.0
-isort==5.13.2
-pylint==3.0.3
-flask
-python-dotenv
-requests
+Flask>=3.0.0
+Werkzeug>=3.0.1
+requests>=2.31.0
+python-dotenv>=1.0.0
+flask-sqlalchemy>=3.1.1
+flask-login>=0.6.3
+psycopg2-binary>=2.9.9
+email-validator>=2.1.0
+oauthlib>=3.2.2
